--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "recipe"]
-	path = recipe
-	url = https://github.com/verl-project/verl-recipe.git
+# [submodule "recipe"]
+# 	path = recipe
+# 	url = https://github.com/verl-project/verl-recipe.git
